# VST-1

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  hotfix-and-build.yml
Source/: CMakeLists.txt  FXChain.h  ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.h  Wavetable.h
